# biogene

./: .gitignore  PLAN.md  README.md  docker-compose.yml  genetic_medicine_search_page_spec_v2_with_mermaid.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260430_0539_2dfd5ee99ec5_baseline_mvp1.py  (+3 more)
backend/etl/: README.md  column_mapping_2_0.yaml  dedupe_2_0_staging.sql  expected_counts.py  extract_2_0_mysql.py  extract_blobs_mdb.py  extract_mdb.sh  gen_transform_2_0.py  import_ntubiogene.py  load_pg.py  merge_1_0.sql  pgloader_2_0.load  post_pgloader.sql  run_etl.py  seed_ref_from_mdb.py  transform.py  transform_2_0.sql  transform_2_0_wrapped.sh  verify.py
backend/gateway/: pyproject.toml
backend/gateway/gateway/: app.py
backend/gateway/tests/: conftest.py  test_condition_query.py  test_list_patients.py
backend/mock-data/db_main/: aa.json  (+13 more)
backend/scripts/: dev.sh  docker-entrypoint.sh  generate_mock.py  load_mock.py  seed_from_json.py  setup-postgres.sh
backend/shared/: pyproject.toml
backend/shared/shared/: __init__.py  condition.py  data_loader.py  db.py  logging.py  schemas.py
backend/shared/shared/models/: __init__.py  _common.py  _ddl.py  base.py  enums.py  links.py
backend/shared/shared/models/main/: __init__.py  aa.py  aadc.py  ald.py  biomarker.py  dnabank.py  enzyme.py  gag.py  gcms.py  lsd.py  mma.py  mps2.py  msms.py  opd.py  outbank.py  patient.py
backend/shared/shared/models/nbs/: __init__.py  aa.py  bd.py  biomarker.py  cah.py  cah_tgal.py  dmd.py  dmd_tsh.py  g6pd.py  msms.py  opd.py  outbank.py  patient.py  sma_scid.py
backend/shared/shared/models/ref/: __init__.py  _base.py  aa_method_ref.py  command_phrase.py  dna_item_ref.py  enzyme_item_ref.py  msms_method_ref.py
backend/shared/tests/: test_condition.py  test_data_loader.py
backend/svc-disease/: pyproject.toml
backend/svc-disease/svc_disease/: app.py
backend/svc-disease/tests/: test_condition_match.py
backend/svc-lab/: pyproject.toml
backend/svc-lab/svc_lab/: app.py
backend/svc-lab/tests/: test_condition_match.py  test_gcms_route.py
backend/svc-patient/: pyproject.toml
backend/svc-patient/svc_patient/: app.py
backend/svc-patient/tests/: test_batch_patients.py  test_search_and_condition.py
compose/init-db/: 01-schemas.sql
compose/proxy/: nginx.conf
frontend/: .dockerignore  .env.example  .prettierignore  .prettierrc.json  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
frontend/.lovable/: plan.md
frontend/specs/: core-happy-paths.md  export-and-stats.md
frontend/src/: App.tsx  index.css
frontend/tests/: cohort-stats-tab.spec.ts  condition-drill-into-patient.spec.ts  condition-query-template-and.spec.ts  mode-toggle.spec.ts  patient-export-csv.spec.ts  patient-export-json.spec.ts  patient-export-xlsx.spec.ts  patient-lookup-by-chartno.spec.ts  patient-search-by-condition.spec.ts  patient-search-by-name.spec.ts  patient-search-empty.spec.ts  patient-search-pagination.spec.ts  patient-stats-dialog.spec.ts  seed.spec.ts
(+205 files in other folders)
