[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway"
version = "0.1.0"
description = "API Gateway / BFF aggregating patient bundles from svc-patient, svc-lab, svc-disease."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*"]
