[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared Pydantic schemas and mock-data loader for backend microservices."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
