[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared Pydantic schemas, SQLAlchemy models, and dual-backend data loader for backend microservices."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
etl-mssql = ["pyodbc>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
