[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svc-lab"
version = "0.1.0"
description = "Common-lab microservice (AA, MS/MS, biomarker, outbank, dnabank) on port 8002."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["svc_lab*"]
