[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svc-patient"
version = "0.1.0"
description = "Patient base-record microservice (port 8001)."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["svc_patient*"]
